@startuml

title __APP's Class Diagram__\n

  package com.arellomobile.mvp {
    class MoxyReflector {
    }
  }
  

  package com.arellomobile.moxy {
    class MvpAppCompatActivityX {
    }
  }
  

  package com.arellomobile.moxy {
    class MvpAppCompatDialogFragmentX {
    }
  }
  

  package com.arellomobile.moxy {
    class MvpAppCompatFragmentX {
    }
  }
  

  MvpAppCompatActivityX -up-|> AppCompatActivity
  MvpAppCompatDialogFragmentX -up-|> AppCompatDialogFragment
  MvpAppCompatFragmentX -up-|> Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
